Add initial project files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://BakaryTrawally.github.io/",
+  "homepage": "https://BakaryTrawally.github.io/personnel",
   "main": "main.js",
   "name": "rescue-fire-service-app",
   "private": true,
