--- a/loginServer/.env
+++ b/loginServer/.env
@@ -1,3 +1,4 @@
-# CONNECTION = mongodb+srv://NansaTrawally:password1234@personnel.yubziio.mongodb.net/personnelData?retryWrites=true&w=majority&appName=Personnel
+CONNECTION = mongodb+srv://NansaTrawally:password1234@logincollections.yubziio.mongodb.net/personnelData?retryWrites=true&w=majority&appName=logincollections
 
 CONNECTION = mongodb://localhost:27017/LoginDataBase
+# CONNECTION = mongodb+srv://NansaTrawally:password1234@personnel.yubziio.mongodb.net/?appName=Personnel
