--- a/loginServer/package.json
+++ b/loginServer/package.json
@@ -4,6 +4,9 @@
   "description": "login app",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+   "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
