--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-# CONNECTION = mongodb+srv://NansaTrawally:password1234@personnel.yubziio.mongodb.net/personnelData?retryWrites=true&w=majority&appName=Personnel
+# CONNECTION = mongodb+srv://NansaTrawally:password1234@leaveTables.yubziio.mongodb.net/personnelData?retryWrites=true&w=majority&appName=leaveTables
 
 CONNECTION = mongodb://localhost:27017/PersonnelDataBase
