--- a/package.json
+++ b/package.json
@@ -35,18 +35,20 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.49.0",
-    "axios": "^1.7.9",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.3",
     "dotenv-extended": "^2.9.0",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "fa-icons": "^0.2.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "mongodb": "^6.19.0",
+    "mongoos": "^0.0.1-security",
     "mongoose": "^8.18.0",
+    "nodemon": "^3.1.11",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.7",
     "react-datepicker": "^4.16.0",
